--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "@angular/router": "~9.1.6",
     "@ionic-native/barcode-scanner": "^5.26.0",
     "@ionic-native/core": "^5.0.7",
+    "@ionic-native/in-app-browser": "^5.26.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ionic/storage": "^2.2.0",
     "cordova-android": "8.1.0",
+    "cordova-plugin-inappbrowser": "^3.2.0",
+    "cordova-sqlite-storage": "^5.0.0",
     "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
@@ -70,7 +74,9 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
       "android"
