--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "@angular/router": "~9.1.6",
     "@ionic-native/barcode-scanner": "^5.26.0",
     "@ionic-native/core": "^5.0.7",
+    "@ionic-native/email-composer": "^5.26.0",
+    "@ionic-native/file": "^5.26.0",
     "@ionic-native/in-app-browser": "^5.26.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/storage": "^2.2.0",
     "cordova-android": "8.1.0",
+    "cordova-plugin-email-composer": "^0.9.2",
+    "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-inappbrowser": "^3.2.0",
     "cordova-sqlite-storage": "^5.0.0",
     "phonegap-plugin-barcodescanner": "^8.1.0",
@@ -76,7 +80,11 @@
       },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-inappbrowser": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-email-composer": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      }
     },
     "platforms": [
       "android"
